feat: Implement optional lua to thorn encoding as per #3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "**/*.mat": true,
         "**/*.anm": true,
         "**/*.dfm": true,
+        "**/.thorn-cache": true,
     },
     "editor.wordWrap": "off",
     "files.associations": {
