feat: Implement optional .bini encoding as per #3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "**/*.anm": true,
         "**/*.dfm": true,
         "**/.thorn-cache": true,
+        "**/.bini-cache": true,
     },
     "editor.wordWrap": "off",
     "files.associations": {
